@@ -1,6 +1,6 @@
 {
-  "count": 13,
-  "uniques": 4,
+  "count": 14,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-04-05T00:00:00Z",
@@ -35,6 +35,11 @@
     {
       "timestamp": "2022-04-15T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-17T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
